erros quase todos feitos.
